<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omniplanner_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aaronray@mit.edu">aaron</maintainer>
  <license>TODO: License declaration</license>

  <depend>omniplanner_msgs</depend>
  <depend>python3-multipledispatch</depend>
  <depend>python3-parse</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
